# GameAudioEngine-Manager

./: AK_AudioManagerV1.cpp  AK_AudioManagerV1.h  CMakeLists.txt  FMOD_AudioManagerV0.cpp  FMOD_AudioManagerV0.h  FMOD_AudioManagerV1.cpp  FMOD_AudioManagerV1.h  README.md  RandomNumberGen.h  main.cpp
AKWAAPI_Test/: AKWAAPI_Test.crossover.validationcache  AKWAAPI_Test.crossover.wsettings  AKWAAPI_Test.wproj
AKWAAPI_Test/.cache/Mac/SFX/: SFX_Accordion_60097B42.wem  SFX_AlienGun_Fire_10C4C929.wem  SFX_DoorLock_0AC486AC.wem  accordion_5sec_10C4C929.wem
AKWAAPI_Test/Actor-Mixer Hierarchy/: Default Work Unit.wwu
AKWAAPI_Test/Attenuations/: Default Work Unit.wwu
AKWAAPI_Test/Audio Devices/: Default Work Unit.wwu
AKWAAPI_Test/Control Surface Sessions/: Default Work Unit.wwu
AKWAAPI_Test/Conversion Settings/: Default Work Unit.wwu
AKWAAPI_Test/Dynamic Dialogue/: Default Work Unit.wwu
AKWAAPI_Test/Effects/: Default Work Unit.wwu
AKWAAPI_Test/Events/: Default Work Unit.wwu
AKWAAPI_Test/Game Parameters/: Default Work Unit.wwu
AKWAAPI_Test/GeneratedSoundBanks/Mac/: PluginInfo.xml  SFX_Test.txt  SoundbanksInfo.xml
AKWAAPI_Test/Interactive Music Hierarchy/: Default Work Unit.wwu
AKWAAPI_Test/Master-Mixer Hierarchy/: Default Work Unit.wwu
AKWAAPI_Test/Mixing Sessions/: Default Work Unit.wwu
AKWAAPI_Test/Modulators/: Default Work Unit.wwu
AKWAAPI_Test/Originals/SFX/: SFX_Accordion.akd  SFX_AlienGun_Fire.akd  SFX_DoorLock.akd  SFX_Wind_Long.akd
AKWAAPI_Test/Presets/: Default Work Unit.wwu
AKWAAPI_Test/Queries/: Default Work Unit.wwu
AKWAAPI_Test/SoundBanks/: Default Work Unit.wwu
AKWAAPI_Test/Soundcaster Sessions/: Default Work Unit.wwu
AKWAAPI_Test/States/: Default Work Unit.wwu
AKWAAPI_Test/Switches/: Default Work Unit.wwu
AKWAAPI_Test/Triggers/: Default Work Unit.wwu
AKWAAPI_Test/Virtual Acoustics/: Default Work Unit.wwu
includes/Wwise/AK/: AkPlatforms.h  AkWwiseSDKVersion.cs  IBytes.h
includes/Wwise/AK/Comm/: AkCommunication.h
includes/Wwise/AK/DSP/: AkApplyGain.h  AkDelayLineMemory.h  AkDelayLineMemoryStream.h  AkModulatorProcess.h  AkVolAutomation.h
includes/Wwise/AK/DSP/Generic/: AkDelayLineMemory.h  AkDelayLineMemoryStream.h
includes/Wwise/AK/MusicEngine/Common/: AkMusicEngine.h
includes/Wwise/AK/Plugin/: AkAudioInputPlugin.h  AkAudioInputSourceFactory.h  AkCompressorFXFactory.h  AkConvolutionReverbFXFactory.h  AkDelayFXFactory.h  AkExpanderFXFactory.h  AkFlangerFXFactory.h  AkGainFXFactory.h  AkGuitarDistortionFXFactory.h  AkHarmonizerFXFactory.h  AkMatrixReverbFXFactory.h  AkMeterFXFactory.h  AkMotionGeneratorSourceFactory.h  AkMotionSinkFactory.h  AkMotionSourceSourceFactory.h  AkOpusDecoderFactory.h  AkParametricEQFXFactory.h  AkPeakLimiterFXFactory.h  AkPitchShifterFXFactory.h  AkRecorderFXFactory.h  AkReflectFXFactory.h  AkReflectGameData.h  AkRoomVerbFXFactory.h  AkSilenceSourceFactory.h  AkSineSourceFactory.h  AkSinkFactory.h  AkSoundSeedImpactFXFactory.h  AkSoundSeedWindSourceFactory.h  AkSoundSeedWooshSourceFactory.h  AkStereoDelayFXFactory.h  AkSynthOneSourceFactory.h  AkTimeStretchFXFactory.h  AkToneSourceFactory.h  AkTremoloFXFactory.h  AkVorbisDecoderFactory.h  AllPluginsFactories.h  AllPluginsRegistrationHelpers.h  AuroHeadphoneFXFactory.h  McDSPFutzBoxFXFactory.h  McDSPLimiterFXFactory.h  (+8 more)
includes/Wwise/AK/Plugin/PluginServices/: AkFXDurationHandler.h  AkFXParameterChangeHandler.h  AkFXTailHandler.h  AkMixerInputMap.h  AkValueRamp.h  AkVectorValueRamp.h
includes/Wwise/AK/SoundEngine/Common/: AkAtomic.h  AkBytesCount.h  AkBytesMem.h  AkCallback.h  AkCommonDefs.h  AkDynamicDialogue.h  AkDynamicSequence.h  AkFPUtilities.h  AkMemoryMgr.h  AkMidiTypes.h  AkModule.h  AkQueryParameters.h  AkSimd.h  AkSimdMath.h  AkSoundEngine.h  AkSoundEngineExport.h  AkSpeakerConfig.h  AkSpeakerVolumes.h  AkStreamMgrModule.h  AkTypes.h  AkVirtualAcoustics.h  IAkMixerPlugin.h  (+7 more)
includes/Wwise/AK/SoundFrame/: SF.h  SFObjects.h
includes/Wwise/AK/Wwise/: AudioPlugin.h  IXmlTextReader.h  IXmlTextWriter.h  PlatformID.h  TargetVer.h  Undo.h  Utilities.h
includes/Wwise/AK/WwiseAuthoringAPI/: AkGuid.h  AkJsonBase.h  AkVariantBase.h  waapi.h
includes/Wwise/StreamManager/: CMakeLists.txt
includes/Wwise/StreamManager/Common/: AkDefaultLowLevelIODispatcher.cpp  AkDefaultLowLevelIODispatcher.h  AkFileLocationBase.cpp  AkFileLocationBase.h  AkFilePackage.cpp  AkFilePackage.h  AkFilePackageLUT.cpp  AkFilePackageLUT.h  AkFilePackageLowLevelIO.h  AkFilePackageLowLevelIO.inl  AkMultipleFileLocation.cpp  AkMultipleFileLocation.h
includes/Wwise/StreamManager/POSIX/: AkDefaultIOHookBlocking.cpp  AkDefaultIOHookBlocking.h  AkDefaultIOHookDeferred.cpp  AkDefaultIOHookDeferred.h  AkFileHelpers.h  AkFilePackageLowLevelIOBlocking.h  AkFilePackageLowLevelIODeferred.h  stdafx.cpp  stdafx.h
(+51 files in other folders)
